tests/negative/typecheck/index_product.orng
// index_product.orng:7:6: error: array is not homotypical and index is not compile-time known
//     x[f()]
//     ^
// 
fn main() -> Int {
    let x: (a: Int, b: Char, c: Bool, d: Int)
    x[f()]
}

fn f() -> Int { 3 }